@@ -1648,3 +1648,7 @@
 2013-09-21  Daniel Juyung Seo (SeoZ)
 
         * menu: added elm_menu_item_subitems_clear.
+
+2013-09-27  ChunEon Park (Hermet)
+
+        * layout: fixed the layout to swallow the contents again when theme is changed.
